<resources>
    <string name="app_name">管线调查</string>
    <string name="title_activity_project">工程管理</string>
    <string name="project">工程</string>
    <string name="edit">调查</string>
    <string name="graph_layer">图层</string>
    <string name="query">查询</string>
    <string name="project_list">工程列表</string>
    <string name="exit">退出</string>
    <string name="confirm">确认</string>
    <string name="dialog_title">提示</string>
    <string name="open_project_file_fail">工程打开失败</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="choose_points">选择检查井</string>
    <string name="title_jcj_inspect">检查井调查</string>
    <string name="title_query_result">查询结果</string>
    <string name="title_add_photo">照片上传</string>
    <string name="photo_type">照片类型</string>
    <string name="jcjbh">检查井编号</string>
    <string name="title_activity_display_photo">查看照片</string>
    <string name="action_delete">删除</string>
    <string name="jscz">井室材质</string>
    <string name="jsqk">井室情况</string>
    <string name="jgcz">井盖材质</string>
    <string name="jgqk">井盖情况</string>
    <string name="jscc">井室尺寸</string>
    <string name="fswlx">附属物类型</string>
    <string name="jlx">井类型</string>
    <string name="ljdh">连接点号</string>
    <string name="ms">埋深</string>
    <string name="gj">管径</string>
    <string name="gc">管材</string>
    <string name="sfdtyz">是否与底图一致</string>
    <string name="sfhj">是否混接</string>
    <string name="hjlx">混接类型</string>
    <string name="bz">备注</string>
    <string name="empty">无数据</string>
    <string name="sftxwc">确认填写完成</string>
    <string name="sfpzwc">确认拍照完成</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="title_album_list">所有照片(%1$s)</string>
    <string name="title_album_list_edit">已选择%1$d项</string>
    <string name="unselect_all">取消全选</string>
    <string name="dialog_delete_photo">是否删除？</string>
    <string name="no_photo">没有照片</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="action_sign_in">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="title_login">用户登录</string>
    <string name="choose_start_or_end_point">请选择检查点</string>
    <string name="title_add_line">编辑管线</string>
    <string name="title_add_point">添加管点</string>
    <string name="choose_delete_point">选择要删除的检查井点</string>
    <string-array name="photo_type_arr">
        <item>清疏前#QQ</item>
        <item>清疏后#QH</item>
        <item>井周边环境#ZB</item>
        <item>围挡#WD</item>
        <item>封堵#FD</item>
        <item>混接#HJ</item>
        <item>截流设施#JL</item>
        <item>监测设施#JC</item>
        <item>节点井#JD</item>
        <item>排口#PK</item>
    </string-array>

</resources>
