<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppTheme.Toolbar"
        app:navigationIcon="@drawable/ic_nav_back"
        app:title="@string/title_add_photo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/jcjbh"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/jcj_bh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:background="@drawable/border2"
                android:gravity="center_vertical">

            </TextView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvSJLB"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/photo_type"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:background="@drawable/border2"
                android:gravity="center_vertical">

                <Spinner
                    android:id="@+id/sp_type"
                    style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:spinnerMode="dropdown" />
            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvSJMS"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:text="备注"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/et_remark"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:background="@drawable/border2"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="3" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:background="@drawable/border1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="照片列表"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/border2"
            android:scrollbars="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photo_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_style"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_style"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>
